--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>  
+
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -5,3 +7,4 @@
     </div>
   </div>
 </div>
+
