--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>Works</h2>
+      <app-recipe-book></app-recipe-book>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
