--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,7 @@
-<p>shopping-list works!</p>
+<div class="row">
+    <div class="col-xs-10">
+        <app-shoppingList-edit></app-shoppingList-edit>
+        <hr>
+        <p>The list</p>
+    </div>
+</div>
