--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,15 @@
     <div class="col-xs-10">
         <app-shoppingList-edit></app-shoppingList-edit>
         <hr>
-        <p>The list</p>
+        <ul class="list-group">
+            <a 
+             class="list-group-item" 
+             style="cursor: pointer"
+             *ngFor="let ingredient of ingredients"
+             >
+            {{ingredient.name}} ({{ ingredient.amount }})
+            </a>
+        </ul>
     </div>
 </div>
+
