Add Header, shopping list, recipe book component functionality

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shoppingList-edit></app-shoppingList-edit>
+        <app-shoppingList-edit
+        (ingredientAdded)="onIngredientAdded($event)"></app-shoppingList-edit>
         <hr>
         <ul class="list-group">
             <a 
